# fiberpath

./: .gitignore  CHANGELOG.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: backend-ci.yml  ci-check.yml  dependency-audit.yml  docs-ci.yml  docs-deploy.yml  gui-ci.yml  gui-e2e-smoke.yml  gui-packaging.yml  release.yml
assets/brand/: README.md
docs/: .pages  index.md
docs/architecture/: .pages  overview.md
docs/development/: .pages  ci-cd.md  contributing.md  dependency-policy.md  feature-backlog.md  release-process.md  roadmap.md
docs/guides/: .pages  axis-mapping.md  machine-profile.md  wind-format.md
docs/reference/: .pages  api.md
examples/cone_reducer/: README.md
examples/multi_layer/: expected.gcode
examples/rocketry/: AvBay(470mm)single.gcode
examples/simple_cylinder/: expected.gcode
examples/sized_simple_cylinder/: expected.gcode
fiberpath/: wire.py
fiberpath/config/: schemas.py
fiberpath/execution/: marlin.py
fiberpath_api/: main.py  path_policy.py  schemas.py
fiberpath_cli/: interactive.py  stream.py
fiberpath_gui/: .gitignore  README.md  index.html  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
fiberpath_gui/src-tauri/: Cargo.toml  tauri.conf.json
fiberpath_gui/src-tauri/icons/: icon.icns
fiberpath_gui/src-tauri/src/: api_path.rs  api_sidecar.rs  cli_path.rs  main.rs  marlin.rs
scripts/: export_openapi.py  freeze_cli.py  generate_schema.py
tests/: sim_plot_snapshot.json  test_motion_ir_invariants.py  test_sim_plot_snapshot.py  test_wire.py
(+154 files in other folders)
