[package]
name = "fiberpath_gui"
version = "0.8.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-shell = "2.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["sync"] }
which = "8.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
